Comment out Java 9 flags. [2345]
Looks like "build 9+176" and so on no longer require the flags, so I've
commented them out for now.